# trading-bot

./: README.md  pyproject.toml
tests/: conftest.py  test_config_loader.py  test_models_types.py  test_pairs_strategy.py  test_paper_broker.py  test_runner.py
trading_bot/: __init__.py  main.py
trading_bot/brokers/: __init__.py  backtest.py  base.py  paper.py
trading_bot/config/: __init__.py  loader.py  schemas.py
trading_bot/config/examples/: pairs_basic.yaml  pairs_mean_reversion.json  pairs_mean_reversion.yaml  run_paper_example.yaml
trading_bot/data/: __init__.py  cache.py  sources.py
trading_bot/execution/: __init__.py  backtest.py  backtest_cli.py  runner.py  scheduler.py
trading_bot/models/: __init__.py  types.py
trading_bot/portfolio/: __init__.py  accounting.py  risk.py
trading_bot/strategies/: __init__.py  base.py  pairs_mean_reversion.py
trading_bot/utils/: __init__.py  logging.py  math.py
