[project]
name = "trading-bot"
version = "0.1.0"
description = "Configuration-driven pairs trading bot scaffold"
authors = [{ name = "Quant Developer" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
  "mypy>=1.8",
]

[build-system]
# Use the locally available build tooling to avoid network fetches during
# installation in restricted environments.
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
